--- a/Glyphview Metrics UI.roboFontExt/info.plist
+++ b/Glyphview Metrics UI.roboFontExt/info.plist
@@ -7,22 +7,20 @@
 	<key>developer</key>
 	<string>Jackson Showalter-Cavanaugh</string>
 	<key>developerURL</key>
-	<string>okaytype.com</string>
+	<string>https://okaytype.com</string>
 	<key>html</key>
 	<false/>
 	<key>launchAtStartUp</key>
 	<integer>1</integer>
 	<key>mainScript</key>
-	<string>glyphview-metrics-ui.py</string>
+	<string>Glyphview_Metrics.py</string>
 	<key>name</key>
 	<string>Glyphview Metrics UI</string>
 	<key>requiresVersionMajor</key>
-	<string>3</string>
-	<key>requiresVersionMinor</key>
-	<string>0</string>
+	<string>4</string>
 	<key>timeStamp</key>
-	<real>1585763669.5671339</real>
+	<real>1692060125.674418</real>
 	<key>version</key>
-	<string>1.0</string>
+	<string>2.0</string>
 </dict>
 </plist>
